examples/valid/pairs/freeNull.wacc
# Create and free a null pair
# Output:
# #runtime error#

#Program:#

begin
  pair(pair, pair) a = null ;
  free a 
end

