examples/invalid/syntaxErr/pairs/badLookup01.wacc
# try to directly print pair's first element
# Output:
# #syntax error#

#Program:#

begin
	pair(int, char) p = newpair(10, 'a') ;
  println fst p
end
